src/snapshots/vm__parser__test__parse_fn_expr-11.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn test(a = 321, b = 123) { 123; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 34,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: FunctionDeclaration {
                ident: u!("test"),
                arguments: [
                    (
                        u!("a"),
                        Some(
                            Int(
                                321,
                            ),
                        ),
                    ),
                    (
                        u!("b"),
                        Some(
                            Int(
                                123,
                            ),
                        ),
                    ),
                ],
                body: [
                    Ast {
                        node: Literal(
                            Int(
                                123,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 28,
                            line: 1,
                            fragment: "123",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "fn test(a = 321, b = 123) { 123; }",
                extra: (),
            },
        },
    ),
)
