src/snapshots/vm__parser__test__parse_fn_expr-12.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn test(a = 123, b) { 123; }\".into())"
---
Err(
    Failure(
        Stack {
            base: Base {
                location: LocatedSpan {
                    offset: 18,
                    line: 1,
                    fragment: ") { 123; }",
                    extra: (),
                },
                kind: Expected(
                    Char(
                        '=',
                    ),
                ),
            },
            contexts: [
                (
                    LocatedSpan {
                        offset: 8,
                        line: 1,
                        fragment: "a = 123, b) { 123; }",
                        extra: (),
                    },
                    Context(
                        "Arguments with defults",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 7,
                        line: 1,
                        fragment: "(a = 123, b) { 123; }",
                        extra: (),
                    },
                    Context(
                        "Function arguments",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "fn test(a = 123, b) { 123; }",
                        extra: (),
                    },
                    Context(
                        "Function declaration",
                    ),
                ),
            ],
        },
    ),
)
