src/snapshots/vm__parser__test__parse_fn_expr-2.snap
---
source: src/parser.rs
expression: "fn_expr(\"fn test(a, b) { 123; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 22,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: FunctionDeclaration {
                ident: Ident(
                    "test",
                ),
                arguments: [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                ],
                body: [
                    Ast {
                        node: Literal(
                            Int(
                                123,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 16,
                            line: 1,
                            fragment: "123",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "fn",
                extra: (),
            },
        },
    ),
)
