src/snapshots/vm__parser__test__parse_fn_expr-3.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn invalid_argument(123, b) { let c = 123; }\".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 20,
                        line: 1,
                        fragment: "123, b) { let c = 123; }",
                        extra: (),
                    },
                    Char(
                        ')',
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 19,
                        line: 1,
                        fragment: "(123, b) { let c = 123; }",
                        extra: (),
                    },
                    Context(
                        "Function arguments",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "fn invalid_argument(123, b) { let c = 123; }",
                        extra: (),
                    },
                    Context(
                        "Function declaration",
                    ),
                ),
            ],
        },
    ),
)
