src/snapshots/vm__parser__test__parse_fn_expr-4.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn incomplete_args(a { 123; }\".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 20,
                        line: 1,
                        fragment: " { 123; }",
                        extra: (),
                    },
                    Char(
                        ')',
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 18,
                        line: 1,
                        fragment: "(a { 123; }",
                        extra: (),
                    },
                    Context(
                        "Function arguments",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "fn incomplete_args(a { 123; }",
                        extra: (),
                    },
                    Context(
                        "Function declaration",
                    ),
                ),
            ],
        },
    ),
)
