src/snapshots/vm__parser__test__parse_fn_expr-5.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn no_args() { 123; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 21,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: FunctionDeclaration {
                ident: Ident(
                    "no_args",
                ),
                arguments: [],
                body: [
                    Ast {
                        node: Literal(
                            Int(
                                123,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 15,
                            line: 1,
                            fragment: "123",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "fn",
                extra: (),
            },
        },
    ),
)
