src/snapshots/vm__parser__test__parse_fn_expr-7.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn missing_block_end() { 123; \".into())"
---
Err(
    Error(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 30,
                        line: 1,
                        fragment: "",
                        extra: (),
                    },
                    Char(
                        '}',
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 30,
                        line: 1,
                        fragment: "",
                        extra: (),
                    },
                    Context(
                        "End of function block",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "fn missing_block_end() { 123; ",
                        extra: (),
                    },
                    Context(
                        "Function declaration",
                    ),
                ),
            ],
        },
    ),
)
