src/snapshots/vm__parser__test__parse_fn_expr-8.snap
---
source: src/parser.rs
expression: "fn_statement(\"fn only_ident\".into())"
---
Err(
    Failure(
        Stack {
            base: Base {
                location: LocatedSpan {
                    offset: 13,
                    line: 1,
                    fragment: "",
                    extra: (),
                },
                kind: Expected(
                    Char(
                        '(',
                    ),
                ),
            },
            contexts: [
                (
                    LocatedSpan {
                        offset: 13,
                        line: 1,
                        fragment: "",
                        extra: (),
                    },
                    Context(
                        "Function arguments",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "fn only_ident",
                        extra: (),
                    },
                    Context(
                        "Function declaration",
                    ),
                ),
            ],
        },
    ),
)
